# VScode-memory-manager

./: .gitignore  CMakeLists.txt  index.md
lib/: VSPtr.hpp
memory_manager/: .gitignore  CMakeLists.txt  Makefile
memory_manager/include/: VSPtr.hpp  client.hpp  control.hpp  counter.hpp  data_type.hpp  g_collector.hpp  header.hpp  ptr_list.hpp
memory_manager/src/: VSPtr.cpp  control.cpp  main.cpp  ptr_data.json
server/: CMakeLists.txt
server/include/: VSPtr.hpp  control.hpp  counter.hpp  g_collector.hpp  server.hpp
server/src/: main.cpp  md5.cpp  ptr_data.json
src/: main.cpp
